# formsg-python-sdk

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/source/: conf.py  getting_started.rst  index.rst
example_app/: flask.py
formsg/: __init__.py  constants.py  crypto.py  exceptions.py  sdk.py  webhook.py
formsg/schemas/: crypto.py  verification.py
formsg/util/: crypto.py  parser.py  validate.py  webhook.py
tests/: test_crypto.py  test_webhook.py
tests/resources/: plaintext.json
