[tool.poetry]
name = "formsg-python-sdk"
version = "0.1.6"
description = "Python SDK for FormSG"
authors = ["Chin Ying <chinying@open.gov.sg>"]
license = "MIT"
packages = [
    { include = "formsg" }
]

[tool.poetry.dependencies]
python = "^3.6.2"
PyNaCl = "^1.5.0"
pytest = "^6.2.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.931"
twine = "^3.7.1"
Sphinx = "^4.4.0"
types-requests = "^2.27.7"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
